--- a/scripts/construccion_visor.Rmd
+++ b/scripts/construccion_visor.Rmd
@@ -3,35 +3,26 @@ title: "index.Rmd"
 author: "Claudia Tribaldos"
 date: "`r Sys.Date()`"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+Importación de la base de datos 
 
-
-ejemplo
 ```{r}
-library(sf)
-presencia <- st_read("C:/Users/triba/Desktop/UGR/TFM/modelo_androcymbium/rawdata/presencia_ok.shp") 
-
-presencia <- st_transform(presencia, 4326)
-presencia
-plot(st_geometry(presencia))
-```
-
-
-datos reales 
-```{r}
-library(sp)
 #basedatos <- read.csv("C:/Users/triba/Desktop/UGR/TFM/VISOR/basedatos_visor.csv", header=TRUE, sep=",", dec=".") #error in read.table: more columns than column names 
 
 #lo hacemos mejor con excel 
 library(readxl)
 basedatos <- read_excel("C:/Users/triba/Desktop/UGR/TFM/VISOR/basedatos_visor1.xlsx")
-basedatos[93,2] <- 36.4858
+```
 
-#transformar a objeto espacial 
+Transformación a objeto espacial
+
+```{r}
+library(sp)
+library(sf)
+
 basedatos <- SpatialPointsDataFrame(basedatos[,1:2], basedatos, proj4string = CRS("+init=epsg:4326"))
 
 basedatos<- st_as_sf(basedatos)
@@ -55,7 +46,6 @@ popup_basedatos <- paste0("<strong> X:</strong> ", basedatos$x,
 ```
 
 Creación del mapa 
-
 ```{r}
 mapa <- leaflet() %>% 
   addTiles()  %>% 
@@ -79,9 +69,6 @@ mapa
 #addLegend('bottomleft', pal= pal, values=~fuente,  title = "Fuentes",  opacity = 1)
 
 ```
-```{r}
-#install.packages("htmlwidgets")
-library(htmlwidgets)
-saveWidget(mapa, "index.html")
-```
+
+
 
